stopped the header button from overflowing

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -26,7 +26,7 @@ h1 {
 	color: #FFF;
 	font-weight: 100;
 	font-size: 4em;
-	padding-top: 20%;
+	// padding-top: 20%;
 }
 
 h3{
